# bisasam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: build_macos.yml  build_ubuntu.yml
apps/: Main.cpp
src/: Main.cpp
tests/: test.cpp
